<resources>
    <string name="app_name">PetMatch</string>
    <string name="bem_vindo">PetMatch</string>
    <string name="login">ACESSAR</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="voltar">voltar</string>
    <string name="password">Senha</string>
    <string name="username">Usuário</string>
    <string name="logo_description">logo\t\t\t\t\t\t\t</string>
    <string name="cardimage">cardImage</string>
    <string name="pet_name_holder">Pet name holder</string>
    <string name="pet_creation_date">pet creation date</string>
    <string name="pet_birthday">pet birthday</string>
    <string name="iv_cardimage" />
    <string name="pet_description">pet_description</string>
    <string name="client_name">"Nome: "</string>
    <string name="client_email">"E-mail: "</string>
    <string name="tv_password">"Senha: "</string>
    <string name="btn_register">CADASTRAR</string>
    <string name="tv_register">Cadastre-se</string>
    <string name="default_notification_channel_id">INHAME</string>
    <string name="escolha_a_foto">Escolha a foto</string>
    <string name="select_image" />
    <string name="pet_name_hint" />
    <string name="pet_birthday_hint">\n</string>
    <string name="pet_description_hint" />
    <string name="Cadastrar" />
    <string name="Agendamento">Agendamento</string>
    <string name="date">Data</string>
    <string name="hour">Hora</string>
    <string name="submit">SOLICITAR</string>
    <string name="schedule">Escolha o dia da sua visita! :)</string>

</resources>