<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".CadastroAnimalActivity">


        <ImageView
            android:id="@+id/iv_pet_list_screen"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pet_novo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/iv_cardimage"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/purple"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_select_image"
            android:text="@string/escolha_a_foto"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_name_hint"
            android:inputType="textPersonName"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/et_pet_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_birthday_hint"
            android:inputType="date"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/et_pet_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_description_hint"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:maxLines="6"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_register_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Cadastrar"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>