<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/iv_pet_list_screen"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:src="@drawable/pet1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/iv_cardimage"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_cv_pet_name"
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:layout_gravity="center"
        android:text="@string/pet_name_holder"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_cv_creation_date"
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:layout_gravity="center"
        android:text="@string/pet_creation_date"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_cv_birthday"
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:layout_gravity="center"
        android:text="@string/pet_birthday"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
/>




</LinearLayout>