<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pback"
    android:orientation="vertical"
    tools:context=".view.ScheduleActivity">

    <TextView
        android:id="@+id/tv_ss_agendamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/schedule"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        app:cardBackgroundColor="@color/purple">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <DatePicker

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:calendarViewShown="false"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:datePickerMode="spinner" />

    <androidx.cardview.widget.CardView
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        app:cardBackgroundColor="@color/purple">

        <TextView
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/hour"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <TimePicker
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:timePickerMode="spinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:backgroundTint="@color/orange"
        android:text="@string/submit" />

</LinearLayout>